--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,16 +8,16 @@ environment:
 install:
   # Get the latest stable version of Node.js or io.js
   - ps: Install-Product node $env:nodejs_version
-  #install modules
+  # install modules
   - npm install
 
 # Post-install test scripts.
 test_script:
-  # Output userful info for debuffing.
+  # Output useful info for debugging.
   - node --version
-  - npm  --version
+  - npm --version
   # run tests
   - npm test
 
-  # Don't actually build.
-  build: off
+# Don't actually build.
+build: off
